fixed design bug on mobile devices

--- a/assets/css/2-modules/_blog_list.sass
+++ b/assets/css/2-modules/_blog_list.sass
@@ -1,19 +1,20 @@
 .posts
 	position: relative
 	margin: 0 auto
-	padding: 0px
+	padding: 0
 
 	.posts_loop_container
 		width: 680px
 		height: 450px
+		margin: 0 auto 25px
 		background-color: #ffffff
 		border-radius: 10px
 		box-shadow: 6px 10px 23px -5px rgba(0,0,0,0.75)
 
 	.post_link_container
-		position: relative
-		top: 90px
-		left: 300px
+		position: absolute
+		margin-top: 0px
+		margin-left: 300px
 		width: 280px
 		font-family: 'Open Sans', sans-serif
 		text-align: center
@@ -23,17 +24,19 @@
 			
 
 	.post_date_container
-		position: relative
-		top: 90px
-		left: 400px
+		position: absolute
+		margin-top: 90px
+		margin-left: 390px
 		color: Grey
 		font-family: 'Open Sans Condensed', sans-serif;
+		text-align: center
 		
 		
 	.featured_image
 		width: 250px
 		height: 187.5px
 		margin-left: 25px
+		margin-top: 70px
 
 	.post_excerpt
 		font-family: 'Open Sans', sans-serif
@@ -152,56 +155,58 @@
 		.posts_loop_container
 			width: 290px
 			height: 600px
-			
+
 		.post_link_container
-			position: relative
+			position: absolute
 			padding: 0px
-			margin: 0px
-			top: 20px
-			left: 50px
-			width: 200px
+			margin-left: 5px
+			width: 280px
 			font-family: 'Open Sans', sans-serif
+			text-align: center
 			h1 a
 				text-decoration: none
 				color: black
-				text-align: center
+				
 
 		.post_date_container
-			position: relative
+			position: absolute
 			padding: 0px
 			margin: 0px
-			top: 10px
-			left: 100px
+			margin-top: 105px
+			margin-left: 90px
 			width: 110px
 			height: 50px
 			color: Grey
 			font-family: 'Open Sans Condensed', sans-serif;
 			
 		.featured_image
+			position: absolute
 			width: 240px
 			height: 180px
 			margin-left: 0px auto
+			margin-top: 150px
 
 		.post_excerpt
 			font-family: 'Open Sans', sans-serif
 			font-size: 14px
-			position: relative
+			position: absolute
 			width: 220px
 			height: 120px
 			display: block
 			text-align: left
 			margin-left: 35px
-			margin-top: 0px
+			margin-top: 350px
 
 		.top_border_keep_reading_button
 			position: absolute
 			width: 230px
 			height: 1px
-			margin-top: 70px
+			margin-top: 500px
 			margin-left: 25px
 
 		.keep_reading_button 
 			margin-left: 90px
+			margin-top: 505px
 			height: 25px
 
 			a
@@ -212,5 +217,7 @@
 
 		.bottom_border_keep_reading_button
 			width: 230px
-			height: 10px
+			height: 1px
+			margin-left: 25px
+			margin-top: 550px
 			margin-left: 25px
