--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -411,19 +411,20 @@ template {
 .posts {
   position: relative;
   margin: 0 auto;
-  padding: 0px; }
+  padding: 0; }
   .posts .posts_loop_container {
     width: 680px;
     height: 450px;
+    margin: 0 auto 25px;
     background-color: #ffffff;
     -webkit-border-radius: 10px;
             border-radius: 10px;
     -webkit-box-shadow: 6px 10px 23px -5px rgba(0, 0, 0, 0.75);
             box-shadow: 6px 10px 23px -5px rgba(0, 0, 0, 0.75); }
   .posts .post_link_container {
-    position: relative;
-    top: 90px;
-    left: 300px;
+    position: absolute;
+    margin-top: 0px;
+    margin-left: 300px;
     width: 280px;
     font-family: 'Open Sans', sans-serif;
     text-align: center; }
@@ -431,15 +432,17 @@ template {
       text-decoration: none;
       color: black; }
   .posts .post_date_container {
-    position: relative;
-    top: 90px;
-    left: 400px;
+    position: absolute;
+    margin-top: 90px;
+    margin-left: 390px;
     color: Grey;
-    font-family: 'Open Sans Condensed', sans-serif; }
+    font-family: 'Open Sans Condensed', sans-serif;
+    text-align: center; }
   .posts .featured_image {
     width: 250px;
     height: 187.5px;
-    margin-left: 25px; }
+    margin-left: 25px;
+    margin-top: 70px; }
   .posts .post_excerpt {
     font-family: 'Open Sans', sans-serif;
     font-size: 14px;
@@ -538,49 +541,50 @@ template {
     width: 290px;
     height: 600px; }
   .posts .post_link_container {
-    position: relative;
+    position: absolute;
     padding: 0px;
-    margin: 0px;
-    top: 20px;
-    left: 50px;
-    width: 200px;
-    font-family: 'Open Sans', sans-serif; }
+    margin-left: 5px;
+    width: 280px;
+    font-family: 'Open Sans', sans-serif;
+    text-align: center; }
     .posts .post_link_container h1 a {
       text-decoration: none;
-      color: black;
-      text-align: center; }
+      color: black; }
   .posts .post_date_container {
-    position: relative;
+    position: absolute;
     padding: 0px;
     margin: 0px;
-    top: 10px;
-    left: 100px;
+    margin-top: 105px;
+    margin-left: 90px;
     width: 110px;
     height: 50px;
     color: Grey;
     font-family: 'Open Sans Condensed', sans-serif; }
   .posts .featured_image {
+    position: absolute;
     width: 240px;
     height: 180px;
-    margin-left: 0px auto; }
+    margin-left: 0px auto;
+    margin-top: 150px; }
   .posts .post_excerpt {
     font-family: 'Open Sans', sans-serif;
     font-size: 14px;
-    position: relative;
+    position: absolute;
     width: 220px;
     height: 120px;
     display: block;
     text-align: left;
     margin-left: 35px;
-    margin-top: 0px; }
+    margin-top: 350px; }
   .posts .top_border_keep_reading_button {
     position: absolute;
     width: 230px;
     height: 1px;
-    margin-top: 70px;
+    margin-top: 500px;
     margin-left: 25px; }
   .posts .keep_reading_button {
     margin-left: 90px;
+    margin-top: 505px;
     height: 25px; }
     .posts .keep_reading_button a {
       font-family: 'Open Sans Condensed', sans-serif;
@@ -589,7 +593,9 @@ template {
       color: grey; }
   .posts .bottom_border_keep_reading_button {
     width: 230px;
-    height: 10px;
+    height: 1px;
+    margin-left: 25px;
+    margin-top: 550px;
     margin-left: 25px; } }
 
 header.outside_wrapper {
